# sanic-security

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  python-app.yml
amyrose/: __init__.py
amyrose.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
amyrose/core/: authentication.py  authorization.py  cache.py  captcha.py  config.py  dto.py  initializer.py  management.py  middleware.py  models.py  utils.py  verification.py
amyrose/lib/: mailgun.py  smtp.py  tortoise.py  twilio.py
asyncauth/core/: authentication.py  authorization.py  cache.py  captcha.py  config.py  initializer.py  middleware.py  models.py  recovery.py  utils.py  verification.py
asyncauth/lib/: ip2proxy.py  smtp.py  tortoise.py  twilio.py
asyncauth/test/: application.py  models.py  server.py
example/: api.py
examples/: rose.ini
examples/Forum/core/: main.py  models.py
examples/core/: main.py  models.py
html/asyncauth/: index.html
html/asyncauth/core/: authentication.html  config.html  index.html  initializer.html  middleware.html  models.html  utils.html  verification.html
html/asyncauth/lib/: twilio.html
html/asyncauth/test/: application.html  utils.html
pydoc/asyncauth/core/: authentication.html  authorization.html  config.html  models.html  utils.html  verification.html
pydoc/asyncauth/lib/: index.html  smtp.html  tortoise.html
pydoc/asyncauth/test/: application.html  index.html  models.html
sanic_security/: __init__.py  authentication.py  authorization.py  blueprint.py  blueprints.py  captcha.py  configuration.py  exceptions.py  models.py  oauth.py  recovery.py  utils.py  validation.py  verification.py
sanic_security/core/: authentication.py  authorization.py  blueprint.py  blueprints.py  cache.py  config.py  exceptions.py  initializer.py  models.py  recovery.py  utils.py  verification.py
sanic_security/lib/: ip2proxy.py  smtp.py  tortoise.py  twilio.py
sanic_security/orm/: tortoise.py  umongo.py
sanic_security/test/: blueprints.py  client.py  server.py  tests.py  unit.py
sanic_security/tests/: blueprints.py  server.py
sanicsecurity/core/: authentication.py  authorization.py  initializer.py  models.py  recovery.py  utils.py  verification.py
sanicsecurity/lib/: ip2proxy.py  smtp.py  tortoise.py  twilio.py
sanicsecurity/test/: server.py
test/: application.py  utils.py
tests/: api.py  conftest.py  custom_orm.py  main.py  postman.py  pytest.ini  server.py  test_01_configuration.py  test_02_registration.py  test_03_login.py  test_04_authorization.py  test_05_verification.py
