[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "sanic-security"
version = "1.11.6"
description = "An effective, simple, and async security library for the Sanic framework."
authors = ["Aidan Stewart <na.stewart365@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
tortoise-orm = ">=0.17.0"
pyjwt = ">=1.7.0"
captcha = "==0.4"
pillow = "==9.5.0"
argon2-cffi = ">=20.1.0"
sanic = ">=21.3.0"
httpx = {version=">=0.13.0", optional=true}
cryptography = {version=">=3.3.1", optional=true}
black = {version="*", optional=true}
blacken-docs = {version="*", optional=true}
pdoc3 = {version="*", optional=true}

[tool.poetry.extras]
dev = ["httpx", "black", "blacken-docs", "pdoc3", "cryptography"]
crypto = ["cryptography"]