[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanic-security"
version = "1.17.0"
requires-python = ">=3.8"
dependencies = [
    "tortoise-orm>=0.17.0",
    "pyjwt>=1.7.0",
    "captcha>=0.4",
    "argon2-cffi>=20.1.0",
    "sanic>=21.3.0",
]
description = "An async security library for the Sanic framework."
authors = [
  { name="Aidan Stewart", email="me@na-stewart.com" },
]
readme = "README.md"
keywords = ["security", "authentication", "authorization", "verification", "async", "sanic"]
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Topic :: Security", "License :: OSI Approved :: MIT License", "Programming Language :: Python"]

[project.optional-dependencies]
oauth= ["httpx-oauth>=0.16.1"]
dev = ["httpx-oauth", "black", "blacken-docs", "pdoc3", "cryptography"]
crypto = ["cryptography>=3.3.1"]

[project.urls]
Documentation = "https://security.na-stewart.com/"
Repository = "https://github.com/na-stewart/sanic-security"
